--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/nwarsalee/tank-game.git"
   },
-  "author": "Nabeel Warsalee, Aaron Buitenwerf, Josh Chalenger",
+  "author": "Nabeel Warsalee, Aaron Buitenwerf, Josh Challenger",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/nwarsalee/tank-game/issues"
